<resources>
    <string name="app_name">TV Quran</string>
    <string name="home">home</string>
    <string name="error">Error</string>
    <string name="generic_server_down">Server is down, try it later</string>
    <string name="generic_error">Unknown error, please contact pentaValue supporting team</string>
    <string name="no_internet">No internet connection, please try it later</string>
    <string name="loading">loading.....</string>
    <string name="home_offline">Home(offline)</string>
    <string name="InternetConnectionDetected">No Internet Connection Detected</string>
    <string name="SorryButYouAreNotConnected">Sorry But You Are Not Connected to the Internet</string>
    <string name="GoOnline">Go Online</string>
    <string name="recitersBeingListedNow">Reciters being listed now</string>
    <string name="Sorted">Sorted :</string>
    <string name="Random">Random</string>
    <string name="mostLiked">most Liked</string>
    <string name="Recent">Recent</string>
    <string name="mostListened">most Listened</string>
    <string name="Cancel">Cancel</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="TermsOfUse">Terms Of Use</string>
    <string name="ContactUs">Contact Us</string>
    <string name="More">More</string>
    <string name="ContactUSAndYouWill">Contact US And You Will recieve our response as soon as posible</string>
    <string name="name">name</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Message">Message</string>
    <string name="Send">Send</string>
    <string name="AutoPlay">AutoPlay</string>
    <string name="updateDateWithOnlyWifi">update data with only wifi</string>
    <string name="Ahmed">ahmed</string>
    <string name="ClearSearchHistory">Clear Search History</string>
    <string name="ClearSearchMade">Clear Search Made </string>
    <string name="ClearHistory">Clear History</string>
    <string name="ClearAcountHistoryFromAllDevices">Clear listen history </string>
    <string name="Recitations">recitations</string>
    <string name="generated">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="SearchForPeapleAndSearch">Search for peaple &amp; search</string>
    <string name="HolyQr2an">Holy Quraan</string>
    <string name="BeautifulQuranRecitation">Beautiful Quran Recitation</string>
    <string name="RecitationByChildren">Recitation By Children</string>
    <string name="Ruqyah">Ruqyah</string>
    <string name="DailyDhikr">Daily Dhikr</string>
    <string name="DUA">Dua</string>
    <string name="AdanAndTakbier">Adan And Takbier</string>
    <string name="amazinQuraan">amazin Quraan</string>
    <string name="VisitorsRecitations">Visitors Recitations</string>
    <string name="VideosLives">Videos / Lives Broadcast</string>
    <string name="RareRecitations">Rare Recitations</string>
    <string name="AlphabeticalOrder">Alphabetical Order</string>
    <string name="RewayatOrder">Rewayat Order</string>
    <string name="LiveBroadCast">Live Broadcast</string>
    <string name="Videos">Videos</string>
    <string name="discoverTitle">Discover</string>
    <string name="downLoadTitle">Downloading...</string>
    <string name="downLoadMsg">You will find the surah in downloaded list</string>
    <string name="ok">Go Downloads</string>
    <string name="action_downloaded">Downlaoded Files</string>
    <string name="title_contactUS">Contact us</string>
    <string name="title_setting">Settings</string>
    <string name="problem">Problem</string>
    <string name="report_title">Report</string>
    <string name="report_msg">Your report has been sent ,Thank you!</string>
    <string name="ti1tle_favorite">Favorite Tracks</string>
    <string name="title_removeDownload">Remove from download</string>
    <string name="remove_downLoadMsg">Are you sure that you want to remove it from downloads?</string>
    <string name="remove">remove</string>
    <string name="fail">Downloaded failed</string>
    <string name="search_result">Search Results</string>
    <string name="title_filter">Filter</string>
    <string name="no_history">You do not have any history</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_more">More</string>
    <string name="no_data">No data found</string>
    <string name="str_noConnectionDetict">Sorry,but you are not connected to internet</string>
    <string name="clear_history_done">Clear History done</string>
    <string name="error_play_sound">error while streaming</string>
    <string name="history_title">History</string>
    <string name="downloaded_title">Downloaded</string>
    <string name="report_close_title">Discard Report</string>
    <string name="report_close_msg">Do you want to discard the report?</string>
    <string name="report_discard">Discard</string>
</resources>
