<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/HomeContenier"
    tools:context="com.pentavalue.tvquran.ui.fragments.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mediumTextSize"
            android:text="@string/recitersBeingListedNow" />
        <android.support.v7.widget.RecyclerView
            android:background="@color/colorWhite"
            android:id="@+id/recyclerView"
            android:paddingTop="@dimen/height_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="@dimen/margin_20"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sorted"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/mediumTextSize"
                />

            <TextView
                android:id="@+id/typeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostLiked"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/mediumTextSize"
                android:textStyle="bold" />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:background="@color/colorWhite"
            android:id="@+id/recyclerViewSorted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
