<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pentavalue.tvquran.ui.fragments.ReportFragment">

    <include layout="@layout/top_bar_home" android:layout_height="wrap_content"
        android:layout_width="match_parent"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_marginTop="@dimen/margin_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/largestTextSize"
                android:textColor="@color/colorBlack"
                android:id="@+id/txt_suraName"/>
            <TextView
                android:layout_marginTop="@dimen/margin_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/largeTextSize"
                android:textColor="@color/colorBlack"
                android:id="@+id/txt_readerName"/>
            <TextView
                android:layout_marginTop="@dimen/margin_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/largeTextSize"
                android:textColor="@color/colorBlack"
                android:id="@+id/txt_category"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_userName"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="@dimen/mediumTextSize"
            android:nextFocusDown="@+id/emailAddress"/>
        <EditText
            android:id="@+id/edt_email"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailAddress"
            android:textSize="@dimen/mediumTextSize"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/message"/>
        <EditText
            android:id="@+id/edt_message"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/problem"
            android:textSize="@dimen/mediumTextSize"
            />
        <Button
            android:id="@+id/btn_send"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rounded_txt"
            android:text="@string/Send"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/largeTextSize"
            android:enabled="false"/>

    </LinearLayout>

</LinearLayout>
